2018-03-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve calls via global function pointers.
	* src/pic16/gen.c,
	  src/pic16/ralloc.c,
	  src/pic16/ralloc.c:
	  Fix NEARPTRSIZE use.
	* src/hc08/main.c:
	  Fix leftover max type size.

2018-03-25 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/stm8-large/Makefile.in,
	  device/lib/stm8-large/_fast_long_neg.s:
	  Remove unused support routine.
	* src/port.h,
	  src/stm8/main.c:
	  Fix library path for large memory model.
	* src/SDCCpeeph.c:
	  Fix labelIsUncondJump() for large memory model.
	* src/stm8/gen.c:
	  Simplify generation of calls, implement 24-bit return values.
	* device/lib/stm8-large/Makefile.in:
	  Fix build of char multiplicative operator routines.
	* support/regression/ports/stm8-large/support.c:
	  Fix regression test output.

2018-03-25 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/collate-results.py,
	* support/regression/compact-results.py,
	* support/regression/get_ticks.py: Accept non-UTF-8 regression test
	  output without throwing an exception under Python 3

2018-03-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fixes for handling of immediate operands for large memory model.
	* device/include/setjmp.h,
	  device/lib/stm8-large/setjmp.s:
	  Fix setjmp() / longjmp() for large memory model.

2018-03-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/port.h,
	  src/*/main.c,
	  src/SDCCglobl.h,
	  src/SDCCglue.c,
	  src/SDCCsymt.c:
	  Handle function pointer sizes separately from object pointer sizes.
	* configure.ac,
	  device/lib/Makefile.in,
	  src/stm8/gen.c,
	  device/lib/stm8-large:
	  stm8-large library.
	* support/regression/Makefile.in,
	  support/regression/ports/stm8-large:
	  stm8-large regression test target.

2018-03-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/port.h,
	  src/SDCCglobl.h,
	  src/SDCCast.c,
	  src/SDCCdwarf2.c,
	  src/SDCCglue.c,
	  src/SDCCicode.c,
	  src/SDCCopt.c,
	  src/SDCCsymt.c,